src/v8/CAPI_CapControls.pas


function CapControls_Get_Name(): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(CapControls_Get_Name_AnsiString());
end;
//------------------------------------------------------------------------------
function CapControls_Get_Next(): Integer; CDECL;
var
    elem: TCapControlObj;
    lst: TPointerList;
begin
    Result := 0;
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        lst := ActiveCircuit[ActiveActor].CapControls;
        elem := lst.Next;
        if elem <> NIL then
        begin
            repeat
                if elem.Enabled then
                begin
                    ActiveCircuit[ActiveActor].ActiveCktElement := elem;
                    Result := lst.ActiveIndex;
                end
                else
                    elem := lst.Next;
            until (Result > 0) or (elem = NIL);
        end
    end;
end;
//------------------------------------------------------------------------------
function CapControls_Get_OFFSetting(): Double; CDECL;
var
    elem: TCapControlObj;
begin
    Result := 0.0;
    elem := ActiveCapControl;
    if elem <> NIL then
        Result := elem.OffValue;
end;
//------------------------------------------------------------------------------
function CapControls_Get_ONSetting(): Double; CDECL;
var
    elem: TCapControlObj;
begin
    Result := 0.0;
    elem := ActiveCapControl;
    if elem <> NIL then
        Result := elem.OnValue;
end;
//------------------------------------------------------------------------------
function CapControls_Get_PTratio(): Double; CDECL;
var
    elem: TCapControlObj;
begin
    Result := 0.0;
    elem := ActiveCapControl;
    if elem <> NIL then
        Result := elem.PTRatioVal;
end;
//------------------------------------------------------------------------------
function CapControls_Get_UseVoltOverride(): Wordbool; CDECL;
var
    elem: TCapControlObj;
begin
    Result := FALSE;
    elem := ActiveCapControl;
    if elem <> NIL then
        if elem.UseVoltageOverride then
            Result := TRUE;
end;
//------------------------------------------------------------------------------
function CapControls_Get_Vmax(): Double; CDECL;
var
    elem: TCapControlObj;
begin
    Result := 0.0;
    elem := ActiveCapControl;
    if elem <> NIL then
        Result := elem.VmaxVal;
end;
//------------------------------------------------------------------------------
function CapControls_Get_Vmin(): Double; CDECL;
var
    elem: TCapControlObj;
begin
    Result := 0.0;
    elem := ActiveCapControl;
    if elem <> NIL then
        Result := elem.VminVal;
end;
//------------------------------------------------------------------------------
procedure CapControls_Set_Capacitor(const Value: PAnsiChar); CDECL;
begin
    Set_Parameter('Capacitor', value);
end;
//------------------------------------------------------------------------------
procedure CapControls_Set_CTratio(Value: Double); CDECL;
begin
    Set_Parameter('CTratio', FloatToStr(value));
end;
//------------------------------------------------------------------------------
procedure CapControls_Set_DeadTime(Value: Double); CDECL;
begin
    Set_Parameter('DeadTime', FloatToStr(value));
end;
//------------------------------------------------------------------------------
procedure CapControls_Set_Delay(Value: Double); CDECL;
begin
    Set_Parameter('Delay', FloatToStr(value));
end;
//------------------------------------------------------------------------------
procedure CapControls_Set_DelayOff(Value: Double); CDECL;
begin
    Set_Parameter('DelayOff', FloatToStr(value));
end;
//------------------------------------------------------------------------------
procedure CapControls_Set_Mode(Value: Integer); CDECL;
var
    elem: TCapControlObj;
begin
    elem := ActiveCapControl;
    if elem <> NIL then
    begin
        case Value of
            dssCapControlCurrent:
                elem.CapControlType := CURRENTCONTROL;
            dssCapControlVoltage:
                elem.CapControlType := VOLTAGECONTROL;
            dssCapControlKvar:
                elem.CapControlType := KVARCONTROL;
            dssCapControlTime:
                elem.CapControlType := TIMECONTROL;
            dssCapControlPF:
                elem.CapControlType := PFCONTROL;
        end;
    end;
end;
//------------------------------------------------------------------------------
procedure CapControls_Set_MonitoredObj(const Value: PAnsiChar); CDECL;
begin
    Set_Parameter('Element', value);
end;
//------------------------------------------------------------------------------
procedure CapControls_Set_MonitoredTerm(Value: Integer); CDECL;
begin
    Set_Parameter('Terminal', IntToStr(value));
end;
//------------------------------------------------------------------------------
procedure CapControls_Set_Name(const Value: PAnsiChar); CDECL;
var
    ActiveSave: Integer;
    S: String;
    Found: Boolean;
    elem: TCapControlObj;
    lst: TPointerList;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        lst := ActiveCircuit[ActiveActor].CapControls;
        S := Value;  // Convert to Pascal String
        Found := FALSE;
        ActiveSave := lst.ActiveIndex;
        elem := lst.First;
        while elem <> NIL do
        begin
            if (CompareText(elem.Name, S) = 0) then
            begin
                ActiveCircuit[ActiveActor].ActiveCktElement := elem;
                Found := TRUE;
                Break;
            end;
            elem := lst.Next;
        end;
        if not Found then
        begin
            DoSimpleMsg('CapControl "' + S + '" Not Found in Active Circuit.', 5003);
            elem := lst.Get(ActiveSave);    // Restore active Load
            ActiveCircuit[ActiveActor].ActiveCktElement := elem;
        end;
    end;
end;
//------------------------------------------------------------------------------
procedure CapControls_Set_OFFSetting(Value: Double); CDECL;
begin
    Set_Parameter('OffSetting', FloatToStr(value));
end;
//------------------------------------------------------------------------------
procedure CapControls_Set_ONSetting(Value: Double); CDECL;
begin
    Set_Parameter('OnSetting', FloatToStr(value));
end;
//------------------------------------------------------------------------------
procedure CapControls_Set_PTratio(Value: Double); CDECL;
begin
    Set_Parameter('PTratio', FloatToStr(value));
end;
//------------------------------------------------------------------------------
procedure CapControls_Set_UseVoltOverride(Value: Wordbool); CDECL;
begin
    if Value = TRUE then
        Set_Parameter('VoltOverride', 'Yes')
    else
        Set_Parameter('VoltOverride', 'No');
end;
//------------------------------------------------------------------------------
procedure CapControls_Set_Vmax(Value: Double); CDECL;
begin
    Set_Parameter('Vmax', FloatToStr(value));
end;
//------------------------------------------------------------------------------
procedure CapControls_Set_Vmin(Value: Double); CDECL;
begin
    Set_Parameter('Vmin', FloatToStr(value));
end;
//------------------------------------------------------------------------------
function CapControls_Get_Count(): Integer; CDECL;
begin
    if Assigned(ActiveCircuit[ActiveActor]) then
        Result := ActiveCircuit[ActiveActor].CapControls.ListSize;
end;
//------------------------------------------------------------------------------
procedure CapControls_Reset(); CDECL;
var
    elem: TCapControlObj;
begin
    elem := ActiveCapControl;
    if elem <> NIL then
    begin
        elem.Reset;
    end;

end;
//------------------------------------------------------------------------------
end.
